    - When a fluid has multiple temperatures, the default temperature will be displayed for fluid products that usually have no temperature
  Bugfixes:
    - Fixed a crash when using the hotkey on a science lab
    - Fixed fluids not being enabled at start even if their offshore pump was
    - Fixed fluid temperature variants not copying recipe categories from their parents
---------------------------------------------------------------------------------------------------
Version: 2.6.0
Date: 2021-04-05
  Features:
    - Added generic object opening support
      - Hovering over any crafter, fluid, item, recipe, or technology anywhere in the game and using the Recipe Book hotkey will open that object's page
    - Added fuel pollution, vehicle acceleration, and vehicle top speed multipliers to item tooltips
    - Added tooltips to close buttons
  Bugfixes:
    - Fixed a crash if another mod updated a new technology in on_configuration_changed before Recipe Book refreshed its data
    - Fixed a crash when a required fluid for mining was unresearched and "show unresearched objects" was off
    - Fixed a crash when using "%" in search in some situations
    - Fixed that changes to object availability would not apply when opening the GUI while preserve session is enabled (credit to kubiix)
---------------------------------------------------------------------------------------------------
Version: 2.5.2
Date: 2021-02-17
  Bugfixes:
    - Fixed a crash when an infinite technology only has one level (#44)
    - Fixed a crash when researching a previously-disabled technology (#44)
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: 2021-02-17
  Bugfixes:
    - Fixed a crash when a character entity had an item to place it (#43)
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: 2021-02-17
  Features: